<resources>
    <string name="app_name">Gravity</string>
    <string name="studentnum">학번</string>
    <string name="password">비밀번호</string>
    <string name="autologin">자동로그인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="forgotpass">Forgot your password? 비밀번호 찾기</string>
    <string name="notmem">Not a member? 회원가입</string>
    <string name="ismem">Already member? 로그인</string>
    <string name="develop">개발</string>
    <string name="plan">기획</string>
    <string name="design">디자인</string>
    <string name="passcheck">비밀번호 확인</string>
    <string name="name">이름</string>
</resources>
